changes en folder api, modify works endpoint and modify readme

--- a/api/work/models/work.settings.json
+++ b/api/work/models/work.settings.json
@@ -41,7 +41,14 @@
         "images"
       ],
       "plugin": "upload",
-      "required": false
+      "required": false,
+      "pluginOptions": {}
+    },
+    "url_video": {
+      "type": "string"
+    },
+    "url_deploy": {
+      "type": "string"
     }
   }
 }
